# libimghash

./: .gitignore  CMakeLists.txt  README.md  hash.cpp  hash.h  hasher.cpp  libimghash.cpp  setup.py  simplehasher.cpp  simplehasher.h  source.cpp  source.h
debian/: changelog  control  rules
examples/: benchmark.cpp  delta.cpp  singlefile.cpp
include/: hasher.h  imghash_c.h  simplehasher.h  source.h
lib/: hash.cpp  imghash_c.cpp  imghash_c.h  simplehasher.cpp  source.cpp
python/: imghash.i  imghash.py  imghash_wrap.cpp  setup.py
tests/: compression_test.cpp  resize_test.cpp  test.cpp
